# baba_is_agent

./: .gitignore  AGENTS.md  README.md  debug.py  help_rules.json  langgraph.json  main.py  opencode.jsonc  pyproject.toml  setup.sh  start_game.py  utils.py
.opencode/: package-lock.json  tsconfig.json
.opencode/agents/: baba.md
.opencode/commands/: solve.md
.opencode/plugins/: game-context.ts  game-updater.ts
.opencode/scripts/: get_agent_tools.sh
.opencode/tests/: README.md  capture_state.ts  interactive_play.ts  print_state.ts  test_level_6.ts  test_multiple_win.ts  test_stacked_rules.ts  test_tools.ts
.opencode/tests/fixtures/: game_state.txt  raw_state.json  wall_flag_state.txt
.opencode/tools/: augment.ts  augment_moves.ts  base.ts  check_win_status.ts  enter_level.ts  execute_commands.ts  execute_game_commands.ts  game_insights.ts  game_rules.ts  get_game_state.ts  leave_level.ts  models.ts  path_finding.ts  restart_level.ts  shortest_path.ts  undo_multiple.ts
.opencode/tools/utils/: augment.ts  base.ts  direct_game.ts  enter_level.ts  execute_commands.ts  game_rules.ts  get_game_insights.ts  get_game_rules.ts  get_game_state.ts  get_game_state_tool.ts  leave_level.ts  models.ts  path_finding.ts  poll_state.ts  shortest_path.ts
automation/: README.md  config.py  enter_level.py  enter_overworld.py  evaluator.py  gui_controller.py  run_solver.py
automation/report/: __main__.py  plots.py  report.py
lua/: io.lua
utils/: __init__.py  augment.py  base.py  models.py  path_finding.py
