[project]
name = "baba-is-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "langchain-mcp-adapters>=0.1.9",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.2",
]

[tool.setuptools.packages.find]
include = ["automation*"]

[project.optional-dependencies]
automation = [
    "configparser>=7.2.0",
    "pyautogui>=0.9.54",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.3.4",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
